title position update + recurent tr update + overflow fix
